# matrix-chain

./: CMakeLists.txt  chain.cpp  chain.h  main.cpp  no-shared.cpp  properties.cpp  utils.cpp  utils.h
test/: CMakeLists.txt  test_chain.cpp
